[package]
name = "chicago-gtfs-rt"
version = "0.1.4-alpha"
edition = "2021"
license = "AGPL-3.0"
description = "Conversion of all Chicago Transit Authority data into GTFS Realtime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-rt = "0.5.0"
tokio = { features = ["full"], version = "1.35.0" }
reqwest = {version = "0.12.5", features = ["deflate","gzip","brotli","rustls-tls"]}
inline_colorization = "0.1.6"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
